packages/errors/test/__snapshots__/CLOUD_CANNOT_UPLOAD_ARTIFACTS.ansi
[31mWarning: We encountered an error while uploading screenshots & videos from your run.[39m
[31m[39m
[31mThese results will not be recorded.[39m
[31m[39m
[31mThis error will not affect or change the exit code.[39m
[31m[39m
[31m[95mStatusCodeError: 500 - "Internal Server Error"[39m[31m[39m